Assign a large z-index to footer so that it floats over anything that is fixed position

--- a/app/frontend/components/_footer.scss
+++ b/app/frontend/components/_footer.scss
@@ -4,4 +4,5 @@
   font-weight: bold;
   margin-top: auto; // Push to the bottom of the screen
   padding: $global-margin;
+  z-index: 100;
 }
